--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tweenjs/tween.js": "^25.0.0",
     "axios": "^1.12.2",
     "es-toolkit": "^1.39.10",
     "gsap": "^3.12.5",
